# planar

./: .gitignore  Cargo.toml
Android/: build.gradle  settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/example/planar/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/example/planar/: Core.kt  GamePage.kt  Home.kt  MainActivity.kt  Navigation.kt  ResourceHelper.kt
Android/app/src/main/java/com/example/planar/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/com/example/planar/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Android/shared/: build.gradle
Android/shared/src/androidTest/java/com/example/planar/shared/: ExampleInstrumentedTest.kt
Android/shared/src/test/java/com/example/planar/shared/: ExampleUnitTest.kt
resources/phenomenon/: fix.sh
shared/: Cargo.toml  uniffi.toml
shared/src/: app.rs  lib.rs  main.rs
shared/src/app/: cards.rs  deck.rs
shared_types/: build.rs
