[workspace]
members = ["shared", "shared_types"]
resolver = "1"

[workspace.package]
authors = ["Kyle Potempa"]
edition = "2021"
repository = "N/A"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.66"

[workspace.dependencies]
anyhow = "1.0.82"
crux_core = "0.7"
serde = "1.0.197"
