[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
anyhow.workspace = true
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
uniffi = "0.28.0"
wasm-bindgen = "0.2.92"
crux_kv = "0.4.1"
log = "0.4.21"
android_logger = "0.13.3"
serde_json = "1.0.116"
rand = "0.8.5"

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.28.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
